* 2006-02-27  0.6.1.12 released 2006-02-27  jrandom     * Adjust the jbigi.jar to use the athlon-optimized jbigi on windows/amd64       machines, rather than the generic jbigi (until we have an athlon64       optimized version)
Monotone-Parent: 10d733aacc179afb3a2c3599025f1ebf823b2c2e
Monotone-Revision: 94c48499b7afc1a64ccb35f07510ddd4cb1dfe99

Monotone-Author: jrandom
Monotone-Date: 2006-02-27T19:05:40
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_12

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.420 2006/02/25 15:41:52 jrandom Exp $
+$Id: history.txt,v 1.421 2006/02/26 16:30:58 jrandom Exp $
+
+* 2006-02-27  0.6.1.12 released
+
+2006-02-27  jrandom
+    * Adjust the jbigi.jar to use the athlon-optimized jbigi on windows/amd64
+      machines, rather than the generic jbigi (until we have an athlon64
+      optimized version)
 
 2006-02-26  jrandom
     * Switch from the bouncycastle to the gnu-crypto implementation for
