2006-02-27  zzz     * Update error page templates to add \r, Connection: close, and       Proxy-connection: close.
Monotone-Parent: 94c48499b7afc1a64ccb35f07510ddd4cb1dfe99
Monotone-Revision: de2eea8af975d4cd224efcae507fe01b70d8942f

Monotone-Author: zzz
Monotone-Date: 2006-02-28T03:55:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.421 2006/02/26 16:30:58 jrandom Exp $
+$Id: history.txt,v 1.422 2006/02/27 14:05:41 jrandom Exp $
+
+2006-02-27  zzz
+    * Update error page templates to add \r, Connection: close, and
+      Proxy-connection: close to headers.
 
 * 2006-02-27  0.6.1.12 released
 
