2006-03-01  jrandom     * More aggressive tunnel throttling as we approach our bandwidth limit,       and throttle based off periods wider than 1 second.     * Included Doubtful Salmon's syndie stylings (thanks!)
Monotone-Parent: d63df2b30fa7acec4cf58688694c36fe636a09f0
Monotone-Revision: 45c5063d2b0cc71ef400e49f4ed73f8cf8d263df

Monotone-Author: jrandom
Monotone-Date: 2006-03-01T23:01:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.422 2006/02/27 14:05:41 jrandom Exp $
+$Id: history.txt,v 1.423 2006/02/27 22:55:18 zzz Exp $
+
+2006-03-01  jrandom
+    * More aggressive tunnel throttling as we approach our bandwidth limit,
+      and throttle based off periods wider than 1 second.
+    * Included Doubtful Salmon's syndie stylings (thanks!)
 
 2006-02-27  zzz
     * Update error page templates to add \r, Connection: close, and
