2006-03-03  Complication     * Explicit check for an index out of bounds exception while parsing       an inbound IRC command (implicit check was there already)
Monotone-Parent: 45c5063d2b0cc71ef400e49f4ed73f8cf8d263df
Monotone-Revision: 8239a752befc0648d6e9933e6d6b98cef3d47aa1

Monotone-Author: complication
Monotone-Date: 2006-03-04T03:04:06
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.423 2006/02/27 22:55:18 zzz Exp $
+$Id: history.txt,v 1.424 2006/03/01 18:01:20 jrandom Exp $
+
+2006-03-03  Complication
+    * Explicit check for an index out of bounds exception while parsing
+      an inbound IRC command (implicit check was there already)
 
 2006-03-01  jrandom
     * More aggressive tunnel throttling as we approach our bandwidth limit,
