2006-03-04  Complication     * Fix the announce URL of orion's tracker in Snark sources
Monotone-Parent: 8239a752befc0648d6e9933e6d6b98cef3d47aa1
Monotone-Revision: 8746e8f0eccc22eba6421753c7f86f2caffdf69a

Monotone-Author: complication
Monotone-Date: 2006-03-04T23:50:01
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.424 2006/03/01 18:01:20 jrandom Exp $
+$Id: history.txt,v 1.425 2006/03/03 22:04:06 complication Exp $
+
+2006-03-04  Complication
+    * Fix the announce URL of orion's tracker in Snark sources
 
 2006-03-03  Complication
     * Explicit check for an index out of bounds exception while parsing
