2006-03-05  Complication     * Reduce exposed statistical information,       to make build and uptime tracking more expensive
Monotone-Parent: 8746e8f0eccc22eba6421753c7f86f2caffdf69a
Monotone-Revision: d30d57cdd4e6d430be19196d54e7b518738b4da3

Monotone-Author: complication
Monotone-Date: 2006-03-05T07:44:59
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.425 2006/03/03 22:04:06 complication Exp $
+$Id: history.txt,v 1.426 2006/03/04 18:50:01 complication Exp $
+
+2006-03-05  Complication
+    * Reduce exposed statistical information,
+      to make build and uptime tracking more expensive
 
 2006-03-04  Complication
     * Fix the announce URL of orion's tracker in Snark sources
