2006-03-05  zzz     * Remove the +++--- from the logs on i2psnark startup
Monotone-Parent: 577a43dfc3513b0e6786ca8f9587822dda4f6297
Monotone-Revision: dcf5e03bec0865f533458d78ac6a1cc1260a7c47

Monotone-Author: zzz
Monotone-Date: 2006-03-06T01:57:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.427 2006/03/05 02:44:59 complication Exp $
+$Id: history.txt,v 1.428 2006/03/05 12:07:15 jrandom Exp $
+
+2006-03-05  zzz
+    * Remove the +++--- from the logs on i2psnark startup
 
 2006-03-05  jrandom
     * HTML fixes in Syndie to work better with opera (thanks shaklen!)
