2006-03-15  jrandom     * Further stat cleanup     * Keep track of how many peers we are actively trying to communicate with,       beyond those who are just trying to communicate with us.     * Further router tunnel participation throttle revisions to avoid spurious       rejections     * Rate stat display cleanup (thanks ripple!)     * Don't even try to send messages that have been queued too long
Monotone-Parent: 399e06641d43d5c851f820832b7f771272284884
Monotone-Revision: 75dca3903aaa062501ab8b76ac4e30cf0568f123

Monotone-Author: jrandom
Monotone-Date: 2006-03-15T22:26:42
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.428 2006/03/05 12:07:15 jrandom Exp $
+$Id: history.txt,v 1.429 2006/03/05 20:57:50 zzz Exp $
+
+2006-03-15  jrandom
+    * Further stat cleanup
+    * Keep track of how many peers we are actively trying to communicate with,
+      beyond those who are just trying to communicate with us.
+    * Further router tunnel participation throttle revisions to avoid spurious
+      rejections
+    * Rate stat display cleanup (thanks ripple!)
+    * Don't even try to send messages that have been queued too long
 
 2006-03-05  zzz
     * Remove the +++--- from the logs on i2psnark startup
