2006-03-15  Complication     * Trim out an old, inactive IP second-guessing method       (thanks for spotting, Anonymous!)
Monotone-Parent: 82074c1376a792504ae306ec1dd43c959aac7600
Monotone-Revision: e58d457e0a9fdc993fc6e0820c8557ffd7de7283

Monotone-Author: complication
Monotone-Date: 2006-03-16T00:49:22
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.429 2006/03/05 20:57:50 zzz Exp $
+$Id: history.txt,v 1.430 2006/03/15 17:26:45 jrandom Exp $
+
+2006-03-15  Complication
+    * Trim out an old, inactive IP second-guessing method
+      (thanks for spotting, Anonymous!)
 
 2006-03-15  jrandom
     * Further stat cleanup
