2006-03-17  jrandom     * Add support for graphing the event count as well as the average stat       value (done by adding &showEvents=true to the URL).  Also supports       hiding the legend (&hideLegend=true), the grid (&hideGrid=true), and       the title (&hideTitle=true).     * Removed an unnecessary arbitrary filter on the profile organizer so we       can pick high capacity and fast peers more appropriately
Monotone-Parent: d2eb8cb406a50aee96467a79a72997149890492e
Monotone-Revision: 3e0ea7927f3c656ec98ca0969d897627010a9b2e

Monotone-Author: jrandom
Monotone-Date: 2006-03-17T23:46:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.431 2006/03/15 19:49:22 complication Exp $
+$Id: history.txt,v 1.432 2006/03/16 16:45:28 jrandom Exp $
+
+2006-03-17  jrandom
+    * Add support for graphing the event count as well as the average stat
+      value (done by adding &showEvents=true to the URL).  Also supports
+      hiding the legend (&hideLegend=true), the grid (&hideGrid=true), and
+      the title (&hideTitle=true).
+    * Removed an unnecessary arbitrary filter on the profile organizer so we
+      can pick high capacity and fast peers more appropriately
 
 2006-03-16  jrandom
     * Integrate basic hooks for jrobin (http://jrobin.org) into the router
