2006-03-18  jrandom     * Added a new graphs.jsp page to show all of the stats being harvested
Monotone-Parent: 12857cb157c1a66f3a8292c80a22cad660fea7d0
Monotone-Revision: 3e837a918b437124d7549281a7da25637e208995

Monotone-Author: jrandom
Monotone-Date: 2006-03-19T00:23:23
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.433 2006/03/17 18:46:03 jrandom Exp $
+$Id: history.txt,v 1.434 2006/03/18 18:09:38 jrandom Exp $
+
+2006-03-18  jrandom
+    * Added a new graphs.jsp page to show all of the stats being harvested
 
 2006-03-18  jrandom
     * Made the netDb search load limitations a little less stringent
