2006-03-20  jrandom     * Fix to allow for some slack when coalescing stats     * Workaround some oddball errors
Monotone-Parent: 3e837a918b437124d7549281a7da25637e208995
Monotone-Revision: cedb911804ea4b8bdc334c4bacac0fdc2fdf2412

Monotone-Author: jrandom
Monotone-Date: 2006-03-20T05:31:09
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.434 2006/03/18 18:09:38 jrandom Exp $
+$Id: history.txt,v 1.435 2006/03/18 19:23:23 jrandom Exp $
+
+2006-03-20  jrandom
+    * Fix to allow for some slack when coalescing stats
+    * Workaround some oddball errors
 
 2006-03-18  jrandom
     * Added a new graphs.jsp page to show all of the stats being harvested
