2006-04-01  jrandom     * Take out the router watchdog's teeth (don't restart on leaseset failure)
Monotone-Parent: 193bf8afe772241e8f43350aaa1f18cdc84e8dc0
Monotone-Revision: 360566dea8fd3639a9bc8460a49e055e76624371

Monotone-Author: jrandom
Monotone-Date: 2006-04-01T19:05:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.440 2006/03/26 18:23:54 jrandom Exp $
+$Id: history.txt,v 1.441 2006/03/30 02:26:43 jrandom Exp $
+
+2006-04-01  jrandom
+    * Take out the router watchdog's teeth (don't restart on leaseset failure)
 
 2006-03-30  jrandom
     * Substantially reduced the lock contention in the message registry (a
