2006-04-01  jrandom     * Take out the router watchdog's teeth (don't restart on leaseset failure)     * Filter the IRC ping/pong messages, as some clients send unsafe       information in them (thanks aardvax and dust!)
Monotone-Parent: 360566dea8fd3639a9bc8460a49e055e76624371
Monotone-Revision: 1c71886fb1eb63af9daad59f9a850543f8ce8541

Monotone-Author: jrandom
Monotone-Date: 2006-04-03T10:07:22
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,9 @@
-$Id: history.txt,v 1.441 2006/03/30 02:26:43 jrandom Exp $
+$Id: history.txt,v 1.442 2006/04/01 14:05:37 jrandom Exp $
 
 2006-04-01  jrandom
     * Take out the router watchdog's teeth (don't restart on leaseset failure)
+    * Filter the IRC ping/pong messages, as some clients send unsafe
+      information in them (thanks aardvax and dust!)
 
 2006-03-30  jrandom
     * Substantially reduced the lock contention in the message registry (a
