2006-04-05  jrandom     * Cut down on the time that we allow a tunnel creation request to sit by       without response, and reject tunnel creation requests that are lagged       locally.  Also switch to a bounded FIFO instead of a LIFO     * Threading tweaks for the message handling (thanks bar!)     * Don't add addresses to syndie with blank names (thanks Complication!)     * Further ban clearance
Monotone-Parent: 953646f71a459a016a3beee7f07ce3fad435eb32
Monotone-Revision: d76ce5ad69506859fcac4375d0438cd0d07aea0c

Monotone-Author: jrandom
Monotone-Date: 2006-04-05T04:40:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.443 2006/04/03 05:07:24 jrandom Exp $
+$Id: history.txt,v 1.444 2006/04/04 07:20:39 jrandom Exp $
+
+2006-04-05  jrandom
+    * Cut down on the time that we allow a tunnel creation request to sit by
+      without response, and reject tunnel creation requests that are lagged
+      locally.  Also switch to a bounded FIFO instead of a LIFO
+    * Threading tweaks for the message handling (thanks bar!)
+    * Don't add addresses to syndie with blank names (thanks Complication!)
+    * Further ban clearance
 
 2006-04-05  jrandom
     * Fix during the ssu handshake to avoid an unnecessary failure on
