2006-04-06  jrandom     * Fixed a typo in the reply cleanup code
Monotone-Parent: 9dd88e97e0f5ccd09188bf419cb171c4728d13a4
Monotone-Revision: 0a69a079c792cd19e713341e8907b1056212a5de

Monotone-Author: jrandom
Monotone-Date: 2006-04-06T10:33:44
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.445 2006/04/04 23:40:04 jrandom Exp $
+$Id: history.txt,v 1.446 2006/04/05 12:08:04 jrandom Exp $
+
+2006-04-06  jrandom
+    * Fixed a typo in the reply cleanup code
 
 * 2006-04-05  0.6.1.14 released
 
