2006-04-06  jrandom     * Fix for a bug in the new irc ping/pong filter (thanks Complication!)
Monotone-Parent: 0a69a079c792cd19e713341e8907b1056212a5de
Monotone-Revision: f21599484c25487237a242ec39b1554c5dddd71e

Monotone-Author: jrandom
Monotone-Date: 2006-04-07T01:26:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.446 2006/04/05 12:08:04 jrandom Exp $
+$Id: history.txt,v 1.447 2006/04/06 05:33:46 jrandom Exp $
+
+2006-04-06  jrandom
+    * Fix for a bug in the new irc ping/pong filter (thanks Complication!)
 
 2006-04-06  jrandom
     * Fixed a typo in the reply cleanup code
