2006-04-08  jrandom     * Stat summarization fix (removing the occational holes in the jrobin       graphs)
Monotone-Parent: 941f72ad2ec841579f57b7796d2cfc9d6dafdd79
Monotone-Revision: 5767f085715c3858d200b7fe8c2873f868eb0dfd

Monotone-Author: jrandom
Monotone-Date: 2006-04-09T01:14:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.448 2006/04/06 20:26:33 jrandom Exp $
+$Id: history.txt,v 1.449 2006/04/08 01:15:45 jrandom Exp $
+
+2006-04-08  jrandom
+    * Stat summarization fix (removing the occational holes in the jrobin
+      graphs)
 
 2006-04-08  jrandom
     * Process inbound tunnel requests more efficiently
