2006-04-10  jrandom     * Include a combined send/receive graph (good idea cervantes!)     * Proactively drop inbound tunnel requests probabalistically as the       estimated queue time approaches our limit, rather than letting them all       through up to that limit.
Monotone-Parent: 5767f085715c3858d200b7fe8c2873f868eb0dfd
Monotone-Revision: 394225eac181f73442a0ea2ed4fa9a4c4a36f927

Monotone-Author: jrandom
Monotone-Date: 2006-04-10T05:37:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.449 2006/04/08 01:15:45 jrandom Exp $
+$Id: history.txt,v 1.450 2006/04/08 20:14:09 jrandom Exp $
+
+2006-04-10  jrandom
+    * Include a combined send/receive graph (good idea cervantes!)
+    * Proactively drop inbound tunnel requests probabalistically as the
+      estimated queue time approaches our limit, rather than letting them all
+      through up to that limit.
 
 2006-04-08  jrandom
     * Stat summarization fix (removing the occational holes in the jrobin
