2006-04-11  jrandom     * Throttling improvements on SSU - throttle all transmissions to a peer       when we are retransmitting, not just retransmissions.  Also, if       we're already retransmitting to a peer, probabalistically tail drop new       messages targetting that peer, based on the estimated wait time before       transmission.     * Fixed the rounding error in the inbound tunnel drop probability.
Monotone-Parent: 394225eac181f73442a0ea2ed4fa9a4c4a36f927
Monotone-Revision: 8b495cc33cf3b3a9dab03ea34fa4932eee966da4

Monotone-Author: jrandom
Monotone-Date: 2006-04-11T13:39:06
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.450 2006/04/08 20:14:09 jrandom Exp $
+$Id: history.txt,v 1.451 2006/04/10 00:37:29 jrandom Exp $
+
+2006-04-11  jrandom
+    * Throttling improvements on SSU - throttle all transmissions to a peer
+      when we are retransmitting, not just retransmissions.  Also, if
+      we're already retransmitting to a peer, probabalistically tail drop new
+      messages targetting that peer, based on the estimated wait time before
+      transmission.
+    * Fixed the rounding error in the inbound tunnel drop probability.
 
 2006-04-10  jrandom
     * Include a combined send/receive graph (good idea cervantes!)
