--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.451 2006/04/10 00:37:29 jrandom Exp $
+$Id: history.txt,v 1.452 2006/04/11 08:39:07 jrandom Exp $
+
+2006-04-12  jrandom
+    * Watch out for failed syndie index fetches (thanks bar!)
 
 2006-04-11  jrandom
     * Throttling improvements on SSU - throttle all transmissions to a peer
