--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.452 2006/04/11 08:39:07 jrandom Exp $
+$Id: history.txt,v 1.453 2006/04/12 01:49:04 jrandom Exp $
+
+2006-04-12  jrandom
+    * Added a further failsafe against trying to queue up too many messages to
+      a peer.
 
 2006-04-12  jrandom
     * Watch out for failed syndie index fetches (thanks bar!)
