2006-04-14  jrandom     * Make some more stats graphable, and allow some internal tweaking on the       tunnel pairing for creation and testing.
Monotone-Parent: d82c8af2b1b36cd7a4497921c2dc01dc78a003f5
Monotone-Revision: 1dac8ffd40f832ad47e9bcb74a7ccbbce182fb71

Monotone-Author: jrandom
Monotone-Date: 2006-04-14T11:40:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.454 2006/04/12 23:22:07 jrandom Exp $
+$Id: history.txt,v 1.455 2006/04/13 07:40:21 jrandom Exp $
+
+2006-04-14  jrandom
+    * Make some more stats graphable, and allow some internal tweaking on the
+      tunnel pairing for creation and testing.
 
 * 2006-04-13  0.6.1.15 released
 
