--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.455 2006/04/13 07:40:21 jrandom Exp $
+$Id: history.txt,v 1.456 2006/04/14 06:42:44 jrandom Exp $
+
+2006-04-14  jrandom
+    * -28.00230115311259 is not between 0 and 1 in any universe I know.
+    * Made the bw-related tunnel join throttle much simpler
 
 2006-04-14  jrandom
     * Make some more stats graphable, and allow some internal tweaking on the
