2006-04-14  jrandom     * 0 isn't very random     * Adjust the tunnel drop to be more reasonable
Monotone-Parent: 519d066d678b72d5c72b74fdf88ff2a0a2f8be81
Monotone-Revision: 1ecb79049c28b39da3bf0f265a8870f809d9d1ea

Monotone-Author: jrandom
Monotone-Date: 2006-04-14T20:24:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.456 2006/04/14 06:42:44 jrandom Exp $
+$Id: history.txt,v 1.457 2006/04/14 13:07:15 jrandom Exp $
+
+2006-04-14  jrandom
+    * 0 isn't very random
+    * Adjust the tunnel drop to be more reasonable
 
 2006-04-14  jrandom
     * -28.00230115311259 is not between 0 and 1 in any universe I know.
