2006-04-15  jrandom     * Adjust the proactive tunnel request dropping so we will reject what we       can instead of dropping so much (but still dropping if we get too far       overloaded)
Monotone-Parent: 1ecb79049c28b39da3bf0f265a8870f809d9d1ea
Monotone-Revision: 14b2f6e7596a7646f99d0a93f792245056599337

Monotone-Author: jrandom
Monotone-Date: 2006-04-15T07:15:19
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.457 2006/04/14 13:07:15 jrandom Exp $
+$Id: history.txt,v 1.458 2006/04/14 15:24:07 jrandom Exp $
+
+2006-04-15  jrandom
+    * Adjust the proactive tunnel request dropping so we will reject what we
+      can instead of dropping so much (but still dropping if we get too far
+      overloaded)
 
 2006-04-14  jrandom
     * 0 isn't very random
