2006-04-27  jrandom     * Fixed the tunnel expiration desync code (thanks Complication!)
Monotone-Parent: 144e404b95adc9ae45a1b4d260f05651d3548a9c
Monotone-Revision: 9d9972dbf5064146c8612951651adef454961945

Monotone-Author: jrandom
Monotone-Date: 2006-04-28T00:08:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.461 2006/04/19 12:47:02 jrandom Exp $
+$Id: history.txt,v 1.462 2006/04/23 16:06:12 jrandom Exp $
+
+2006-04-27  jrandom
+    * Fixed the tunnel expiration desync code (thanks Complication!)
 
 * 2006-04-23  0.6.1.17 released
 
