2006-04-27  jrandom     * Avoid a race in the message reply registry (thanks cervantes!)
Monotone-Parent: 9d9972dbf5064146c8612951651adef454961945
Monotone-Revision: 1888bc90fb43db7c1097666faf2db8fe00d0e73e

Monotone-Author: jrandom
Monotone-Date: 2006-04-28T00:31:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.462 2006/04/23 16:06:12 jrandom Exp $
+$Id: history.txt,v 1.463 2006/04/27 19:08:40 jrandom Exp $
+
+2006-04-27  jrandom
+    * Avoid a race in the message reply registry (thanks cervantes!)
 
 2006-04-27  jrandom
     * Fixed the tunnel expiration desync code (thanks Complication!)
