2006-05-01  jrandom     * Fix for a netDb lookup race (thanks cervantes!)
Monotone-Parent: e57fcb6c50d88193076b3179d67c23d8c61cad7e
Monotone-Revision: fe9e9a9e8b1eb9cca3d06f8da2aa2a7b05bfa8ba

Monotone-Author: jrandom
Monotone-Date: 2006-05-01T19:09:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.463 2006/04/27 19:08:40 jrandom Exp $
+$Id: history.txt,v 1.464 2006/04/27 19:31:21 jrandom Exp $
+
+2006-05-01  jrandom
+    * Fix for a netDb lookup race (thanks cervantes!)
 
 2006-04-27  jrandom
     * Avoid a race in the message reply registry (thanks cervantes!)
