2006-05-01  jrandom     * Adjust the tunnel build timeouts to cut down on expirations, and       increased the SSU connection establishment retransmission rate to       something less glacial.     * For the first 5 minutes of uptime, be less aggressive with tunnel       exploration, opting for more reliable peers to start with.
Monotone-Parent: fe9e9a9e8b1eb9cca3d06f8da2aa2a7b05bfa8ba
Monotone-Revision: a6de1924ea9622113425d986004aa9070dba8f2d

Monotone-Author: jrandom
Monotone-Date: 2006-05-01T22:40:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.464 2006/04/27 19:31:21 jrandom Exp $
+$Id: history.txt,v 1.465 2006/05/01 14:09:02 jrandom Exp $
+
+2006-05-01  jrandom
+    * Adjust the tunnel build timeouts to cut down on expirations, and
+      increased the SSU connection establishment retransmission rate to
+      something less glacial.
+    * For the first 5 minutes of uptime, be less aggressive with tunnel
+      exploration, opting for more reliable peers to start with.
 
 2006-05-01  jrandom
     * Fix for a netDb lookup race (thanks cervantes!)
